examples/sidecar/k8s/cfn.yaml
apiVersion: v1
kind: Service
metadata:
  name: cfn
  namespace: a2a-demo
spec:
  selector:
    app: cfn
  ports:
  - port: 9002
    targetPort: 9002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cfn
  namespace: a2a-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cfn
  template:
    metadata:
      labels:
        app: cfn
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: cfn
        image: cfn:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 9002
